manifestos/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: tutorial-k8s
spec:
  selector:
    app: webapp
  ports:
  - port: 3000    
    targetPort: 3000
