manifestos/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webapp
  namespace: tutorial-k8s
spec:
  rules:
  - host: webapp.localhost
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 3000
